--- a/src/scss/_preset.scss
+++ b/src/scss/_preset.scss
@@ -7,37 +7,38 @@ $green: #46fcb4;
 $blue: #00baff;
 
 @font-face {
-  font-family: 'Roboto';
-  font-weight: 700;
-  src: url("../assets/fonts/Roboto-Bold.ttf");
+    font-family: 'Roboto';
+    font-weight: 700;
+    src: url('../assets/fonts/Roboto-Bold.ttf');
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-weight: 400;
-  src: url("../assets/fonts/Roboto-Regular.ttf");
+    font-family: 'Roboto';
+    font-weight: 400;
+    src: url('../assets/fonts/Roboto-Regular.ttf');
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-weight: 200;
-  src: url("../assets/fonts/Roboto-Light.ttf");
+    font-family: 'Roboto';
+    font-weight: 200;
+    src: url('../assets/fonts/Roboto-Light.ttf');
 }
 
-body, html {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: $second;
-  font-family: $roboto;
-  font-size: 10px;
-  color: $prime;
+body,
+html {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $second;
+    font-family: $roboto;
+    font-size: 10px;
+    color: $prime;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
